--- a/src/app/fizzbuzz/fizzbuzz.component.html
+++ b/src/app/fizzbuzz/fizzbuzz.component.html
@@ -2,4 +2,11 @@
   <input name="start">
   <input name="end">
   <button type="submit"></button>
+  <ol class="results">
+    <li><span class="input">1</span>: <span class="output">1</span></li>
+    <li><span class="input">2</span>: <span class="output">2</span></li>
+    <li><span class="input">3</span>: <span class="output">Fizz</span></li>
+    <li><span class="input">4</span>: <span class="output">4</span></li>
+    <li><span class="input">5</span>: <span class="output">Buzz</span></li>
+  </ol>
 </div>
